packages/jsii/test/negatives/neg.enum-name.2.ts
export enum My_Enum {
  FOO,
  GOO,
}
